--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.3.0",
     "react": "~15.6.1",
-    "react-native": "~0.48.3"
+    "react-native": "~0.48.3",
+    "prop-types": "^15.5.10"
   }
 }
